--- a/web/views/src/base.html
+++ b/web/views/src/base.html
@@ -69,6 +69,13 @@
 			color: {{ COLOR_PRIMARY_LIGHT_TEXT }};
 		}
 
+    .overflow-dots {
+      display: block;
+      white-space: nowrap;
+      overflow: hidden !important;
+      text-overflow: ellipsis;
+    }
+
 		.bg-min {
 			background-color: {{ COLOR_PRIMARY_LIGHT }};
 			color: {{ COLOR_WHITE }};
