--- a/web/views/pages/settings.html
+++ b/web/views/pages/settings.html
@@ -27,7 +27,7 @@
           <p class="h4 font-weight-bold mt-3 mb-3">Настройки</p>
           <div class="row">
 
-            <div class="col-6">
+            <div class="col-12 col-lg-6">
               <div class="row">
 
 
@@ -36,14 +36,14 @@
                     <input id="bot-token" class="form-control" type="text" placeholder="1234567890:BOT_TOKEN" value="">
                   </div>
 
-                  <div class="col">
-                    <a href="#" class="btn btn-block btn-purple btn-sm py-2 px-4 mt-3"><i class="fal fa-wrench"></i> Установить</a>
+                  <div class="col-sm-12 col-md-12 col-lg">
+                    <a href="#" class="btn btn-block btn-purple btn-sm py-2 px-4 mt-3 overflow-dots"><i class="fal fa-wrench"></i> Установить</a>
                   </div>
-                  <div class="col">
-                    <a href="#" class="btn btn-block btn-purple btn-sm py-2 px-4 mt-3"><i class="fal fa-info"></i> Информация</a>
+                  <div class="col-12 col-sm">
+                    <a href="#" class="btn btn-block btn-purple btn-sm py-2 px-4 mt-3 overflow-dots"><i class="fal fa-info"></i> Информация</a>
                   </div>
-                  <div class="col">
-                    <a href="#" class="btn btn-block btn-danger btn-sm py-2 px-4 mt-3"><i class="fal fa-trash"></i> Удалить</a>
+                  <div class="col-12 col-sm">
+                    <a href="#" class="btn btn-block btn-danger btn-sm py-2 px-4 mt-3 overflow-dots"><i class="fal fa-trash"></i> Удалить</a>
                   </div>
 
 
