--- a/web/views/pages/login.html
+++ b/web/views/pages/login.html
@@ -18,7 +18,7 @@
 									<label class="mb-0 small" for="key">Ключ доступа</label>
 									<div class="input-group date">
 										<div class="input-group-prepend">
-											<div class="input-group-text"><i class="fad fa-unlock-alt"></i></div>
+											<div class="input-group-text"><i class="far fa-lock-alt"></i></div>
 										</div>
 											<input id="key" class="form-control" type="password" placeholder="Ключ"><span class="input-group-addon"></span>
 									</div>
@@ -26,7 +26,7 @@
 									<label class="mb-0 small mt-3" for="time">Время сеанса</label>
 									<div class="input-group date">
 										<div class="input-group-prepend">
-											<div class="input-group-text"><i class="fad fa-clock"></i></div>
+											<div class="input-group-text"><i class="far fa-clock"></i></div>
 										</div>
 											<input id="time" class="form-control" type="text" placeholder="Время сеанса (мин.)"><span class="input-group-addon"></span>
 									</div>
